5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1712_2507.log
== TEST (2019-05-14 20:24:52) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (q1 > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	a=a + (a * p1 / 100)
	a=a - qv
	qv=int(input("quantidade de pirarucus retirados para venda: "))

if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:26:07) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (q1 > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * p1 / 100)
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:26:29) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (q1 > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * p1 / 100)
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (a < 80000 )and (q1 > 0 ) and (p1 > 0) and (qv > 0):
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:27:24) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * p1 / 100)
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:28:11) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * p1 / 100)
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:29:57) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:30:26) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a < 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:31:14) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	
	a=a + (a * (p1 / 100))
	a=a - qv
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:31:29) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (qv > 0):
	t=t + 1
	
	a=a + (a * (p1 / 100))
	a=a - qv
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:32:53) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and :
	t=t + 1
	a=a + (a * (p1 / 100))
	a=a - qv
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
File "XXXX", line 6
    while (a < 80000 )and (a > 0 ) and (p1 > 0) and :
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:32:59) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	a=a + (a * (p1 / 100))
	a=a - qv
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    a=a - qv
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:33:16) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:33:52) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.160907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:34:31) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	
	a=a + (a * (p1 / 100))
	a=a - qv
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:35:18) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	a=a - qv
	a=a + (a * (p1 / 100))
	
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:36:26) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=float(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	a=a - qv
	a=a + (a * (p1 / 100))
	
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:36:50) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=float(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	a=a - qv
	a=a + (a * (p1 / 100))
	
	qv=int(input("quantidade de pirarucus retirados para venda: "))
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:38:00) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.171973
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:38:10) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:39:06) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:39:46) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:40:26) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (p1<100):
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.190364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:40:50) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (p1<100) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:50:39) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (p1<100) :
	t=t + 1
	
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- OUTPUT:
MAXIMO
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:51:02) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
qv=int(input("quantidade de pirarucus retirados para venda: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (p1<100) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100))
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	print(t)
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:55:01) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (p1<100) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.218359
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:55:04) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) and (p1<100) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:55:27) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0 :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
File "XXXX", line 6
    while (a < 80000 )and (a > 0 ) and (p1 > 0 :
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:55:31) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) and (p1 > 0) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:55:50) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.141169
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
quantidade de pirarucus: percentual de crecimento mensal:quantidade de pirarucus retirados para venda: MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
quantidade de pirarucus: percentual de crecimento mensal:quantidade de pirarucus retirados para venda: MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:55:50) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal:"))
a=q1
t=0

while (a < 80000 )and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:56:40) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.13908
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:56:41) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 80000 )and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:59:05) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (q1 *p1 / 100)) - qv
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.20038
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:59:51) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a <= 0):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.135357
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:00:16) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a => 8000):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.142322
-- ERROR:
  File "/home/codebench/codes/1712/2507/main.py", line 12
    if (a => 8000):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:00:18) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a => 8000):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- ERROR:
File "XXXX", line 12
    if (a => 8000):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:00:28) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- OUTPUT:
ZERO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:00:30) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("ZERO")
	
else :
	print("MAXIMO")
	print(t)
-- EXECUTION TIME:
0.18574
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:00:50) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("ZERO")
	
else :
	print("MAXIMO")
print(t)
-- EXECUTION TIME:
0.127525
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
ZERO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:07:36) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000 and a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("MAXIMO")

else :
	print("ZERO")
print(t)
-- EXECUTION TIME:
0.196415
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:10:32) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000) and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("MAXIMO")

else :
	print("ZERO")
print(t)
-- EXECUTION TIME:
0.144698
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:10:33) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000) and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("MAXIMO")

else :
	print("ZERO")
print(t)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:10:36) 
-- CODE:
q1=int(input("quantidade de pirarucus: "))
p1=int(input("percentual de crecimento mensal: "))
a=q1
t=0

while (a < 8000) and (a > 0 ) :
	t=t + 1
	qv=int(input("quantidade de pirarucus retirados para venda: "))
	a=a + (a * (p1 / 100)) 
	a=a - qv
	
if (a >= 8000):
	print ("MAXIMO")

else :
	print("ZERO")
print(t)
-- EXECUTION TIME:
0.219707
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
